Remove top margins for easier control as it avoids margin collapse

--- a/source/styles/helpers/_variables.scss
+++ b/source/styles/helpers/_variables.scss
@@ -27,4 +27,8 @@ $table-bg             : transparent !default;
 $table-cell-padding   : 0.75rem !default;
 
 
+
+$border-color: #ddd;
+
+
 $code-signs           : ("html", "javascript", "js", "json", "bash", "css", "scss", "less", "python", "ruby", "java", "xml");
