--- a/source/styles/page/_post.scss
+++ b/source/styles/page/_post.scss
@@ -1,17 +1,23 @@
-.post {
-    padding-top: 1em;
-}
-
 .post-block {
+    .post-header {
+        margin-bottom: 1rem;
+        line-height: 1.5;
+    }
+
     .post-title {
-        margin: 0.65em 0;
         color: #2c3e50;
-        font-size: 1.5em;
+        font-size: 1.5rem;
+
+        margin-bottom: 0;
+    }
+
+    .post-title-link {
+        color: $body-color;
+        text-decoration: none;
     }
 
     .post-time {
         color: #7f8c8d;
-        margin: 1.2em 0;
     }
 }
 
@@ -22,30 +28,24 @@
 
         &:before {
             content: "#";
-            color: #42b983;
+            color: $theme-primary;
             position: absolute;
             left: -1em;
         }
     }
 
-    h2, h3 {
-        margin: 2em 0 1em;
-    }
-
-    h4, h5, h6 {
-        margin: 1em 0;
-    }
-
     blockquote {
         margin: 2em 0;
         padding-left: 20px;
-        border-left: 4px solid #42b983;
+        border-left: 4px solid $theme-primary;
     }
+
     img {
         display: block;
         max-width: 100%;
         margin: 1em auto;
     }
+
     .tip {
         position: relative;
         margin: 2em 0;
@@ -58,6 +58,7 @@
             display: none;
         }
     }
+
     .tip:before {
         position: absolute;
         top: 14px;
@@ -72,6 +73,5 @@
         font-weight: bold;
         text-align: center;
         background-color: #f66;
-        font-family: 'Dosis', 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
     }
 }
