--- a/source/styles/partial/_header.scss
+++ b/source/styles/partial/_header.scss
@@ -1,10 +1,11 @@
-header {
+.site-header {
     background-color: #fff;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
     position: relative;
     z-index: 2;
 
     padding: 0;
+    margin-bottom: 2rem;
 
     nav {
         margin: 0 auto;
@@ -44,9 +45,10 @@ header {
 
         a {
             line-height: 1.4;
-            padding-bottom: 3px;
             color: $body-color;
             text-decoration: none;
+            text-transform: uppercase;
+            font-weight: 600;
         }
     }
 }
