--- a/source/styles/partial/_responsive.scss
+++ b/source/styles/partial/_responsive.scss
@@ -11,7 +11,7 @@
         padding: 2em 1em;
     }
 
-    header {
+    .site_header {
         text-align: center;
 
         a.logo-link,
